macでビルドできるようにする

--- a/Impressionist/CMakeLists.txt
+++ b/Impressionist/CMakeLists.txt
@@ -1,11 +1,45 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 project(Impressionist CXX)
 
+set(OPTION_BUILD_EXAMPLES OFF CACHE BOOL "Build FLTK examples" FORCE)
+set(OPTION_BUILD_TEST OFF CACHE BOOL "Build FLTK tests" FORCE)
+
 set(PROJECT_VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_FLAGS "-fpermissive -std=c++0x")
+if(APPLE)
+  set(CMAKE_CXX_FLAGS "-fpermissive -std=c++0x -Wno-c++11-narrowing -Wno-register -Wno-misleading-indentation -DGL_SILENCE_DEPRECATION -DENABLE_NEON=ON -include \"${CMAKE_CURRENT_SOURCE_DIR}/include/mac_fixes.h\"")
+  set(CMAKE_CC "clang")
+  set(CMAKE_CXX "clang++")
+  find_library(OPENGL_FRAMEWORK OpenGL REQUIRED)
+  find_library(COREGRAPHICS_FRAMEWORK CoreGraphics REQUIRED)
+  find_library(COCOA_FRAMEWORK Cocoa REQUIRED)
+  find_library(APPLICATIONSERVICES_FRAMEWORK ApplicationServices REQUIRED)
+  find_library(CARBON_FRAMEWORK Carbon REQUIRED)
+  find_library(CORESERVICES_FRAMEWORK CoreServices REQUIRED)
+  find_library(COREFOUNDATION_FRAMEWORK CoreFoundation REQUIRED)
+  find_library(COREVIDEO_FRAMEWORK CoreVideo REQUIRED)
+  find_library(QUARTZ_FRAMEWORK Quartz REQUIRED)
+  find_library(UNIFORMTYPEIDENTIFIERS_FRAMEWORK UniformTypeIdentifiers QUIET)
+  set(EXTRA_LIBS 
+      ${OPENGL_FRAMEWORK} 
+      ${COREGRAPHICS_FRAMEWORK} 
+      ${COCOA_FRAMEWORK} 
+      ${APPLICATIONSERVICES_FRAMEWORK}
+      ${CARBON_FRAMEWORK}
+      ${CORESERVICES_FRAMEWORK}
+      ${COREFOUNDATION_FRAMEWORK}
+      ${COREVIDEO_FRAMEWORK}
+      ${QUARTZ_FRAMEWORK}
+  )
+  if(UNIFORMTYPEIDENTIFIERS_FRAMEWORK)
+    list(APPEND EXTRA_LIBS ${UNIFORMTYPEIDENTIFIERS_FRAMEWORK})
+  endif()
+else()
+  set(CMAKE_CXX_FLAGS "-fpermissive -std=c++0x")
+  set(EXTRA_LIBS "")
+endif()
 
 add_subdirectory(../fltk ThirdParty/fltk)
 
@@ -13,6 +47,10 @@ add_subdirectory(../fltk ThirdParty/fltk)
 add_library(fltk_all INTERFACE)
 target_include_directories(fltk_all INTERFACE ../fltk ${CMAKE_CURRENT_BINARY_DIR}/fltk)
 target_link_libraries(fltk_all INTERFACE fltk fltk_gl fltk_images)
+
+# fltk_hello
+add_executable(fltk_hello fltk_hello.cpp)
+target_link_libraries(fltk_hello PRIVATE fltk_all ${EXTRA_LIBS})
 
 set(Impressionist_SRC
   src/impressionist.cpp
@@ -35,8 +73,7 @@ set(Impressionist_SRC
 
 add_executable(Impressionist ${Impressionist_SRC})
 target_include_directories(Impressionist PRIVATE include/)
-target_link_libraries(Impressionist PRIVATE fltk_all)
+target_link_libraries(Impressionist PRIVATE fltk_all ${EXTRA_LIBS})
 
 # Set as default project
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT Impressionist)
-
